<?xml version="1.0"?>
<package format="2">
  <name>opendrive_visualize</name>
  <version>1.0.0</version>
  <description>The opendrive_visualize package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>proj</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>proj</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>proj</exec_depend>

  <export>
  </export>
</package>
